prover-ray/zkcdriver/testdata/synced/invalid/bitwise_10.zkc
//error:3:13-14:expected type u8
fn f(x:u8, y:u4) -> (r:u8) {
    r = x | y
    return
}
